# smol-online

./: Cargo.toml
src/client/: main.rs
src/client/game/: inputs.rs  mod.rs  network.rs
src/game/: mod.rs
src/server/: main.rs
src/server/game/: mod.rs  network.rs
src/server/game/network/: systems.rs
src/server/game/teams/: components.rs  events.rs  mod.rs  systems.rs
src/shared/: events.rs  lib.rs
