[package]
name = "smol-online"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "client"
path = "src/client/main.rs"

[[bin]]
name = "server"
path = "src/server/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "shared"
path = "src/shared/lib.rs"

[dependencies]
bevy = "0.13.2"
serde = { version = "1.0", features = ["derive"] }

bevy_replicon = { version = "0.26" }
bevy_replicon_renet = { version = "0.3" }
bevy_ecs_tilemap = { git = "https://github.com/StarArawn/bevy_ecs_tilemap", branch = "main" }
